[tool.poetry]
name = "RePort"
version = "0.1.0"
description = ""
authors = ["Tyler Hillery <tyler.p.hillery@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
duckdb = "0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.241"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"